services/parking-finder/openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: parking-finder-app
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"parking-finder-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"parking-finder-app\")].image"}]'
  labels:
    app: parking-finder-app
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/component: parking-finder-app
    app.kubernetes.io/instance: parking-finder-app
  name: parking-finder-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: parking-finder-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: parking-finder-app
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: dev
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: pg-login
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: pg-login
        image: parking-finder-app:latest
        imagePullPolicy: IfNotPresent
        name: parking-finder-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
