services/parking-finder/openshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parking-finder-app
    app.kubernetes.io/component: parking-finder-app
    app.kubernetes.io/instance: parking-finder-app
  name: parking-finder-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: parking-finder-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
